<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">All_Find APP</string>
    <string name="title_activity_peripheral">Peripheral</string>
    <!-- 登陆页面的 -->
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="psw_remenber">记住密码</string>

    <!-- 注册页面的 -->
    <string name="username">用    户  名：</string>
    <string name="password">密													码：</string>
    <string name="repassword">确认密码：</string>
    <string name="register2">注														册</string>
    <string name="title_activity_user_set">UserSetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
   <!-- 扫描页面 -->
   <string name="laberName">设备名：</string>
   <string name="distance">距离：</string>
   <string name="laberAddress">设备标识：</string>
   
  <!-- 连接状态页面-->
  <string name="connectionStatus">连接状态：</string>
   <string name="connected"> connected</string>
    <string name="disconnect"> disconnect</string>
     <string name="connecting"> connecting</string>
    <string name="labledistance">定位距离</string>
    <string name="setdistance">设置距离</string>
    <string name="getword">查看留言</string>
    <string name="closebear">关闭警报</string>
     <string name="openbear">开启警报</string>
     
     <!-- 登录后的界面-->
    <string name="lostflag">标记丢失</string>
    <string name="mylost">查看丢失列表</string>
    <string name="putword">发布留言</string>
    <string name="changname">修改名称</string>
    <string name="bandaddress">绑定设备</string>
    <string name="setlocation">查看定位信息</string>

</resources>
