<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelForName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/laberName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="999"
            android:ellipsize="end"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelForRSSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0"
            android:text="@string/distance"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelForAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:text="@string/laberAddress"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="999"
            android:ellipsize="end"
            android:text=""
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/deviceRssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textSize="18sp" />

    </TableRow>

</TableLayout>